crates/reinhardt-core/macros/tests/ui/fail/missing_path.stderr
error: expected string literal
 --> tests/ui/fail/missing_path.rs:8:8
  |
8 |         auth:,
  |              ^
